# BD-laboratorios

./: .gitignore  CHECKLIST.md  CMakeLists.txt  DOCUMENTACION.md  Makefile  Page.cpp  Page.h  QUICKSTART.md  README.md  compile.bat  compile.sh  input.cpp  main.cpp  part1_binary_files.cpp  part2_memory_management.cpp  part3_page_class.cpp  quick_test.cpp
BD_laboratorio_1/: DICCIONARIO_DATOS.md  Makefile  Page.cpp  Page.h  Parte1_ArchivosBinarios.cpp  Parte2_GestionMemoria.cpp  Parte3_TestPage.cpp  README.md  data.db
SGBD/: data.db  main.cpp
SGBD/include/: common.h  page.h  pager.h
SGBD/src/: page.cpp  pager.cpp
